--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
 </head>
 <body>
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+    <script 
+        type="text/babel" 
+        data-type="module" 
+        data-presets="react,typescript"
+        src="/index.tsx">
+    </script>
 </body>
 </html>
